Fixed share buttom don't show on mobile active state

--- a/article-preview-component-master/style.css
+++ b/article-preview-component-master/style.css
@@ -56,6 +56,7 @@ body {
     background-color: white;
     inline-size: 100%;
     max-inline-size: fit-content;
+    min-inline-size: 430px;
     block-size: fit-content;
     border-radius: .8rem;
     display: flex;
@@ -117,25 +118,28 @@ body {
     }
 }
 
-.share-button {
-    inline-size: fit-content;
-    padding: .5rem;
-    border-radius: 50%;
-    background-color: var(--bg-color);
-    border: none;
-    margin: 0;
-    justify-self: flex-end;
+.tooltip-container {
+    .share-button {
+        inline-size: fit-content;
+        padding: .5rem;
+        border-radius: 50%;
+        background-color: var(--bg-color);
+        border: none;
+        margin: 0;
+        justify-self: flex-end;
+        position: relative;
+        cursor: pointer;
+        z-index: 4;
 
-    cursor: pointer;
-    z-index: 2;
 
+        img {
+            width: 24px;
+            height: auto;
 
-    img {
-        width: 24px;
-        height: auto;
-
+        }
     }
 }
+
 
 .share-container {
     position: absolute;
